--- a/destination_altertable/spec.yaml
+++ b/destination_altertable/spec.yaml
@@ -2,6 +2,9 @@ documentationUrl: https://docs.airbyte.com/integrations/destinations/altertable
 supported_destination_sync_modes:
   - overwrite
   - append
+supportsIncremental: false
+supportsNormalization: false
+supportsDBT: false
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   type: object
@@ -15,24 +18,23 @@ connectionSpecification:
   properties:
     host:
       type: string
-      title: Altertable Host
+      title: Host
+      default: api.altertable.ai
     port:
       type: integer
-      default: 8080
       title: Port
+      default: 443
     username:
       type: string
-      default: airbyte
       title: Username
+      default: airbyte
     password:
       type: string
-      default: password
       title: Password
+      default: password
     catalog:
       type: string
       title: Catalog
-      description: The catalog (e.g. `iceberg`, `hive`) to write to.
     schema:
       type: string
       title: Schema
-      description: The schema (e.g. `default`) in the catalog to write to.
