--- a/destination_altertable/spec.yaml
+++ b/destination_altertable/spec.yaml
@@ -2,6 +2,7 @@ documentationUrl: https://docs.airbyte.com/integrations/destinations/altertable
 supported_destination_sync_modes:
   - overwrite
   - append
+  - append_dedup
 supportsIncremental: false
 supportsNormalization: false
 supportsDBT: false
@@ -26,8 +27,8 @@ connectionSpecification:
       default: 443
     http_port:
       type: integer
-      title: Port
-      default: 3000
+      title: HTTP port
+      default: 15000
     username:
       type: string
       title: Username
