use altertable-flightsql client

--- a/scripts/destination_config.local.json
+++ b/scripts/destination_config.local.json
@@ -4,6 +4,6 @@
   "catalog": "altertable",
   "schema": "public",
   "username": "altertable",
-  "password": "lh_sk_a_password",
-  "tls": false,
+  "password": "password",
+  "tls": false
 }
