--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,16 @@ classifiers = [
 
 dependencies = [
     "airbyte_cdk>=6.51.0",
-    "pyarrow>=20.0.0",
+    "altertable-flightsql>=0.2.0"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
+    "pytest>=7.0.0",
+    "black>=22.0.0",
+    "isort>=5.10.0",
+    "ruff>=0.0.270"
 ]
 
 [project.scripts]
