--- a/destination_altertable/spec.yaml
+++ b/destination_altertable/spec.yaml
@@ -3,15 +3,13 @@ supported_destination_sync_modes:
   - overwrite
   - append
   - append_dedup
-supportsIncremental: false
+supportsIncremental: true
 supportsNormalization: false
 supportsDBT: false
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   type: object
   required:
-    - host
-    - port
     - username
     - password
     - catalog
@@ -28,11 +26,9 @@ connectionSpecification:
     username:
       type: string
       title: Username
-      default: airbyte
     password:
       type: string
       title: Password
-      default: password
     catalog:
       type: string
       title: Catalog
