--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,40 @@ on:
     branches: [main]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    services:
+      altertable-mock:
+        image: ghcr.io/altertable-ai/altertable-mock:latest
+        ports:
+          - 15002:15002
+        env:
+          ALTERTABLE_MOCK_FLIGHT_PORT: "15002"
+          ALTERTABLE_MOCK_USERS: "altertable-test:lk_test"
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+
+      - name: Run tests
+        env:
+          ALTERTABLE_HOST: localhost
+          ALTERTABLE_PORT: "15002"
+          ALTERTABLE_USERNAME: altertable-test
+          ALTERTABLE_PASSWORD: lk_test
+          ALTERTABLE_TLS: "false"
+        run: pytest tests/ -v
+
   lint:
     runs-on: ubuntu-latest
     steps:
